[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Enimies/Perseguidores/Enemy_chaser_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Enimies/Perseguidores/Explosive.gd" type="Script" id=2]
[ext_resource path="res://Assets/Enimies/Perseguidores/Explosivo.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[sub_resource type="CircleShape2D" id=2]
radius = 150.0

[node name="Explosive" instance=ExtResource( 1 )]
script = ExtResource( 2 )
damage = 0

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="Range" index="0"]
shape = SubResource( 1 )

[node name="explosion_chase" type="Area2D" parent="." index="9"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="explosion_chase" index="0"]
shape = SubResource( 2 )

[node name="Explosion_timer" type="Timer" parent="." index="10"]
[connection signal="body_entered" from="explosion_chase" to="." method="_on_explosion_chase_body_entered"]
[connection signal="timeout" from="Explosion_timer" to="." method="_on_Explosion_timer_timeout"]

[editable path="HurtBox"]

[editable path="Hitbox"]

[editable path="Range"]
